Jenkins file à jour et conf des outils